Add geocoder script

--- a/package.json
+++ b/package.json
@@ -39,7 +39,8 @@
     "start": "npm run develop",
     "serve": "gatsby serve",
     "clean": "gatsby clean",
-    "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
+    "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1",
+    "geocode": "node src/scripts/geocoder.js"
   },
   "repository": {
     "type": "git",
