--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "gatsby-image": "^2.2.44",
     "gatsby-plugin-google-analytics": "^2.2.2",
     "gatsby-plugin-manifest": "^2.2.48",
+    "gatsby-plugin-netlify": "^2.2.1",
     "gatsby-plugin-offline": "^3.0.41",
     "gatsby-plugin-postcss": "^2.2.1",
     "gatsby-plugin-react-helmet": "^3.1.24",
