--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-fade-in": "^0.1.8",
+    "react-feather": "^2.0.3",
     "react-helmet": "^5.2.1"
   },
   "devDependencies": {
