--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "tp-tracker",
   "private": true,
-  "description": "Track availability of toilet paper at Walmart, Target, and Walgreens stores in the DC-Maryland-Virginia area",
+  "description": "Track availability of toilet paper at stores in the DC-Maryland-Virginia area",
   "version": "0.1.0",
   "author": "Sepehr Sobhani & Pramod Jacob",
   "dependencies": {
@@ -23,6 +23,7 @@
     "prop-types": "^15.7.2",
     "ramda": "^0.27.0",
     "react": "^16.12.0",
+    "react-bootstrap-sweetalert": "^5.1.9",
     "react-dom": "^16.12.0",
     "react-fade-in": "^0.1.8",
     "react-feather": "^2.0.3",
