--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@react-google-maps/api": "^1.8.6",
     "axios": "^0.19.2",
     "blueimp-md5": "^2.13.0",
+    "dayjs": "^1.8.23",
     "firebase": "^7.13.1",
     "gatsby": "^2.19.45",
     "gatsby-image": "^2.2.44",
